# ecgi_model

./: .gitignore  README.md  pyproject.toml
examples/: spheres.py  square.py
src/ecgi_model/: core.py
tests/: load.py  load2.py  reg.py  teo.py  transfer.py
